[metadata]
license = GPL-2.0
license_file = LICENSE
name = felisaparser
version = 1.0.0
description = This package contains a function to directly parse a excel file into a csv file
author = Adrián Martínez, David Del Río
url = https://github.com/daviddelriod/felisaparser

[options]
packages = find:
requires = ['pandas']